--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,42 +1,32 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno then run `deno lint` and `deno test`.
-# For more information see: https://github.com/denoland/setup-deno
-
-name: Deno
+name: Run Tests
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
-
-permissions:
-  contents: read
+    branches:
+      - main # 或者您项目的默认分支
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v3
-
-      - name: Setup Deno
-        # uses: denoland/setup-deno@v1
-        uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31  # v1.1.2
-        with:
-          deno-version: v1.x
-
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
-
-      - name: Run linter
-        run: deno lint
-
-      - name: Run tests
-        run: deno test -A
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+      
+    - name: Set up Deno
+      uses: denoland/setup-deno@v2
+      with:
+        deno-version: latest
+        
+    - name: Run Tests
+      run: |
+        deno test > test_report.txt
+        
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-report
+        path: test_report.txt
+        
+    - name: Cleanup
+      run: rm test_report.txt
