--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -36,6 +36,8 @@ jobs:
 
   build_image:
     stage: build_image
-    script:
-      - echo "Hello world !!"
-      
+    runs-on: ubuntu-latest
+    steps:  # 在这里定义具体步骤
+      - name: Build Docker Image  # 示例步骤
+        run: echo "Hello world !!"
+        
