--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Run tests
         run: deno test -A
 
-  # build_image:
-  #   runs-on: ubuntu-latest
-  #   steps:  
-  #     - name: Build Docker Image  
-  #       run: docker build -t hellocat .
+  build_image:
+    runs-on: ubuntu-latest
+    steps:  
+      - name: Build Docker Image  
+        run: docker build -t hellocat .
