--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -32,4 +32,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:  
       - name: Build Docker Image  
-        run: docker build -t hellocat .
+        run: docker build -t hellocat ${{ github.repository }}
